# librevpi

./: CMakeLists.txt  lib_rev_pi.c  loop_test.c  piControlIf.h  revpi_di.h  revpi_do.h  simple_DO_write.c  test_aio.c  test_di_do.c
include/: piControl.h  revpi.h  revpi.hpp
src/: revpi.c  revpi.cpp
